<resources>
    <string name="app_name">Hotel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnTxtIngresar">Login</string>
    <string name="btnTxtSpa" translatable="false">Spa</string>
    <string name="btnTxtCuenta">Account</string>
    <string name="txtWelcome">Welcome</string>
    <string name="btnTxtMainMenu">Main Menu</string>
    <string name="userTextTxt">Username</string>
    <string name="passTextTxt">Password</string>
    <string name="txtName">Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtTelefono">Telephone</string>
</resources>